--- a/index.html
+++ b/index.html
@@ -294,7 +294,25 @@ that can be extended to accommodate different sensor types.</p>
   </div>
   <main>
    <h2 class="heading settled" data-level="1" id="intro"><span class="secno">1. </span><span class="content">Introduction</span><a class="self-link" href="#intro"></a></h2>
-   <p>Introduction here.</p>
+   <p>Increasingly, sensor data is used in application development to
+enable new use cases such a geolocation,
+counting steps or head-tracking.
+This is especially true on mobile devices where new sensors are added regularly.
+It is also increasinly common in networked objects
+which are part of the Internet of Things.</p>
+   <p>Exposing sensor data to the Web
+has so far been both slow-paced and ad-hoc.
+Few sensors are already exposed to the Web.
+When they are, it is often in ways that limit their possible use cases
+(for example by exposing abstractions that are too high level
+and which don’t perform well enough).
+APIs also vary greatlty from one sensor to the next
+which increases the cognitive burden of authors and slows development.</p>
+   <p>The goal of the Generic Sensor API is to
+promote consistency across sensor APIs,
+enable advanced use cases thanks to performant low-level APIs, 
+and increase the pace at which new sensors can be exposed to the Web
+by simplifying the specification and implementation processes.</p>
    <p></p>
    <h2 class="heading settled" data-level="2" id="use-cases"><span class="secno">2. </span><span class="content">Use Cases</span><a class="self-link" href="#use-cases"></a></h2>
    <div class="issue no-marker" id="issue-d41d8cd9">
