--- a/index.html
+++ b/index.html
@@ -232,9 +232,9 @@ by simplifying the specification and implementation processes.</p>
     </ul>
    </div>
    <h2 class="heading settled" data-level="4" id="terminology"><span class="secno">4. </span><span class="content">Terminology</span><a class="self-link" href="#terminology"></a></h2>
-   <p><dfn data-dfn-type="dfn" data-noexport="" id="sensors">Sensors<a class="self-link" href="#sensors"></a></dfn> measure physical quantities such as temperature, acceleration, air pressure or luminosity. Examples of sensors include (but are not limited to): GPS, compass, altimeter, barometer, podometer, thermometer or gyroscope.</p>
-   <p>The output of sensors can be provided as is or combined with the output of other sensors through a process called <dfn data-dfn-type="dfn" data-noexport="" id="sensor-fusion">sensor fusion<a class="self-link" href="#sensor-fusion"></a></dfn> to provide higher-level or more accurate data (often at the cost of increased latency). For example, the output of an three-axis magnetometer needs to be combined with the output of an accelerometer to provide a correct bearing. Sensor fusion can be carried out at the hardware level or in software.</p>
-   <p><a data-link-type="dfn" href="#sensors">Sensors</a> created through <a data-link-type="dfn" href="#sensor-fusion">sensor fusion</a> are sometimes called virtual sensors or synthetic sensors. However, the specification doesn’t make any practical differences between them.</p>
+   <p>A <dfn data-dfn-type="dfn" data-noexport="" id="sensor">Sensor<a class="self-link" href="#sensor"></a></dfn> measures physical quantities such as temperature, acceleration, air pressure or luminosity and provide a corresponding output. Examples of sensors include (but are not limited to): GPS, compass, altimeter, barometer, podometer, thermometer or gyroscope. A <a data-link-type="dfn" href="#conformant-user-agent">User Agent</a> may expose different types of sensors may expose multiple sensors of the same kind, for example a rear and front proximity sensor on a mobile phone.</p>
+   <p>The output of sensors can be provided as is or combined with the output of other sensors through a process called <dfn data-dfn-type="dfn" data-noexport="" id="sensor-fusion">sensor fusion<a class="self-link" href="#sensor-fusion"></a></dfn> to provide higher-level or more accurate data (often at the cost of increased latency). For example, the output of a three-axis magnetometer needs to be combined with the output of an accelerometer to provide a correct bearing. Sensor fusion can be carried out at the hardware level or in software.</p>
+   <p><a data-link-type="dfn" href="#sensor">Sensors</a> created through <a data-link-type="dfn" href="#sensor-fusion">sensor fusion</a> are sometimes called virtual sensors or synthetic sensors. However, the specification doesn’t make any practical differences between them.</p>
    <h2 class="heading settled" data-level="5" id="api"><span class="secno">5. </span><span class="content">API</span><a class="self-link" href="#api"></a></h2>
    <div class="issue no-marker" id="issue-d41d8cd91">
     <a class="self-link" href="#issue-d41d8cd91"></a><a class="marker" href="https://github.com/w3c/sensors/issues/8">Issue #8 on GitHub: “Should sensors be singleton?”</a>
@@ -254,18 +254,18 @@ by simplifying the specification and implementation processes.</p>
     </ul>
    </div>
    <h3 class="heading settled" data-level="5.1" id="the-sensors-interface"><span class="secno">5.1. </span><span class="content">The <code>Sensors</code> Interface</span><a class="self-link" href="#the-sensors-interface"></a></h3>
-   <p>The <a data-link-type="dfn" href="#sensors">Sensors</a> interface represents a container for a list of <a data-link-type="dfn" href="#sensorinfo">SensorInfo</a> objects. It is exposed on Window and Workers as the <code>Window.sensors</code> and <code>WorkerGlobalScope.sensors</code> attribute respectively.</p>
+   <p>The <a data-link-type="dfn" href="#sensor">Sensors</a> interface represents a container for a list of <a data-link-type="dfn" href="#sensorinfo">SensorInfo</a> objects. It is exposed on Window and Workers as the <code>Window.sensors</code> and <code>WorkerGlobalScope.sensors</code> attribute respectively.</p>
 <pre class="idl">[<dfn class="idl-code" data-dfn-for="Sensors" data-dfn-type="constructor" data-export="" data-lt="Sensors()" id="dom-sensors-sensors">Constructor<a class="self-link" href="#dom-sensors-sensors"></a></dfn>, Exposed=(Window,Worker)]
-interface <dfn class="idl-code" data-dfn-type="interface" data-export="" id="sensors0">Sensors<a class="self-link" href="#sensors0"></a></dfn> {
+interface <dfn class="idl-code" data-dfn-type="interface" data-export="" id="sensors">Sensors<a class="self-link" href="#sensors"></a></dfn> {
   Promise&lt;sequence&lt;<a data-link-type="idl-name" href="#sensorinfo1">SensorInfo</a>>> <dfn class="idl-code" data-dfn-for="Sensors" data-dfn-type="method" data-export="" data-lt="matchAll(options)|matchAll()" id="dom-sensors-matchall">matchAll<a class="self-link" href="#dom-sensors-matchall"></a></dfn>(optional <a data-link-type="idl-name" href="#dictdef-matchalloptions">MatchAllOptions</a> <dfn class="idl-code" data-dfn-for="Sensors/matchAll(options), Sensors/matchAll()" data-dfn-type="argument" data-export="" id="dom-sensors-matchall-options-options">options<a class="self-link" href="#dom-sensors-matchall-options-options"></a></dfn>);
 };
 
 partial interface <a class="idl-code" data-link-type="interface" href="https://html.spec.whatwg.org/multipage/browsers.html#window">Window</a> {
-  [SameObject] readonly attribute <a data-link-type="idl-name" href="#sensors0">Sensors</a> <dfn class="idl-code" data-dfn-for="Window" data-dfn-type="attribute" data-export="" data-readonly="" data-type="Sensors " id="dom-window-sensors">sensors<a class="self-link" href="#dom-window-sensors"></a></dfn>;
+  [SameObject] readonly attribute <a data-link-type="idl-name" href="#sensors">Sensors</a> <dfn class="idl-code" data-dfn-for="Window" data-dfn-type="attribute" data-export="" data-readonly="" data-type="Sensors " id="dom-window-sensors">sensors<a class="self-link" href="#dom-window-sensors"></a></dfn>;
 };
 
 partial interface <a class="idl-code" data-link-type="interface" href="https://html.spec.whatwg.org/multipage/workers.html#workerglobalscope">WorkerGlobalScope</a> {
-  [SameObject] readonly attribute <a data-link-type="idl-name" href="#sensors0">Sensors</a> <dfn class="idl-code" data-dfn-for="WorkerGlobalScope" data-dfn-type="attribute" data-export="" data-readonly="" data-type="Sensors " id="dom-workerglobalscope-sensors">sensors<a class="self-link" href="#dom-workerglobalscope-sensors"></a></dfn>;
+  [SameObject] readonly attribute <a data-link-type="idl-name" href="#sensors">Sensors</a> <dfn class="idl-code" data-dfn-for="WorkerGlobalScope" data-dfn-type="attribute" data-export="" data-readonly="" data-type="Sensors " id="dom-workerglobalscope-sensors">sensors<a class="self-link" href="#dom-workerglobalscope-sensors"></a></dfn>;
 };
 
 dictionary <dfn class="idl-code" data-dfn-type="dictionary" data-export="" id="dictdef-matchalloptions">MatchAllOptions<a class="self-link" href="#dictdef-matchalloptions"></a></dfn> {
@@ -377,8 +377,9 @@ dictionary <dfn class="idl-code" data-dfn-type="dictionary" data-export="" id="d
    <p>Returns the id of the sensor. This is an opaque DOMString.</p>
    <h4 class="heading settled" data-level="5.2.2" id="sensorinfoisdefault"><span class="secno">5.2.2. </span><span class="content"><dfn data-dfn-type="dfn" data-noexport="" id="sensorinfoisdefault0">SensorInfo.isDefault<a class="self-link" href="#sensorinfoisdefault0"></a></dfn></span><a class="self-link" href="#sensorinfoisdefault"></a></h4>
    <p>Returns true if the sensor is the default sensor of that type on the device, false otherwise.</p>
-   <h3 class="heading settled" data-level="5.3" id="the-sensor-interface"><span class="secno">5.3. </span><span class="content">The <dfn data-dfn-type="dfn" data-noexport="" id="sensor">Sensor<a class="self-link" href="#sensor"></a></dfn> Interface</span><a class="self-link" href="#the-sensor-interface"></a></h3>
-   <p>The <code>Sensor</code> interface’s role is to observe the changes in a given sensor at regular intervals and emit events when those value change in a consumer-configurable way.</p>
+   <h3 class="heading settled" data-level="5.3" id="the-sensor-interface"><span class="secno">5.3. </span><span class="content">The <dfn class="idl-code" data-dfn-type="interface" data-export="" id="sensor0">Sensor<a class="self-link" href="#sensor0"></a></dfn> Interface</span><a class="self-link" href="#the-sensor-interface"></a></h3>
+   <p>A <code>Sensor</code> object has an associated <a data-link-type="dfn" href="#sensor">sensor</a>.</p>
+   <p><code>Sensor</code> Interface’s role is to observe the changes in a given sensor at regular intervals and emit events when those value change in a consumer-configurable way.</p>
    <div class="issue no-marker" id="issue-d41d8cd95">
     <a class="self-link" href="#issue-d41d8cd95"></a><a class="marker" href="https://github.com/w3c/sensors/issues/14">Issue #14 on GitHub: “Should sensors require a privileged context?”</a>
     <p>The <a href="https://w3c.github.io/webappsec/specs/powerfulfeatures/">Privileged Contexts spec</a> notes:</p>
@@ -403,7 +404,7 @@ dictionary <dfn class="idl-code" data-dfn-type="dictionary" data-export="" id="d
     </ul>
    </div>
 <pre class="idl">[<dfn class="idl-code" data-dfn-for="Sensor" data-dfn-type="constructor" data-export="" data-lt="Sensor(info, sensorObserverOptions)" id="dom-sensor-sensor">Constructor<a class="self-link" href="#dom-sensor-sensor"></a></dfn>(<a data-link-type="idl-name" href="#sensorinfo1">SensorInfo</a> <dfn class="idl-code" data-dfn-for="Sensor/Sensor(info, sensorObserverOptions)" data-dfn-type="argument" data-export="" id="dom-sensor-sensor-info-sensorobserveroptions-info">info<a class="self-link" href="#dom-sensor-sensor-info-sensorobserveroptions-info"></a></dfn>, optional <a data-link-type="idl-name" href="#dictdef-sensoroptions">SensorOptions</a> <dfn class="idl-code" data-dfn-for="Sensor/Sensor(info, sensorObserverOptions)" data-dfn-type="argument" data-export="" id="dom-sensor-sensor-info-sensorobserveroptions-sensorobserveroptions">sensorObserverOptions<a class="self-link" href="#dom-sensor-sensor-info-sensorobserveroptions-sensorobserveroptions"></a></dfn>), Exposed=(Window,Worker)]
-interface <dfn class="idl-code" data-dfn-type="interface" data-export="" id="sensor0">Sensor<a class="self-link" href="#sensor0"></a></dfn> : <a data-link-type="idl-name" href="https://dom.spec.whatwg.org#interface-eventtarget">EventTarget</a> {
+interface <a class="idl-code" data-link-type="interface" href="#sensor0">Sensor</a> : <a data-link-type="idl-name" href="https://dom.spec.whatwg.org#interface-eventtarget">EventTarget</a> {
   attribute double <dfn class="idl-code" data-dfn-for="Sensor" data-dfn-type="attribute" data-export="" data-type="double " id="dom-sensor-frequency">frequency<a class="self-link" href="#dom-sensor-frequency"></a></dfn>;
   attribute boolean <dfn class="idl-code" data-dfn-for="Sensor" data-dfn-type="attribute" data-export="" data-type="boolean " id="dom-sensor-batch">batch<a class="self-link" href="#dom-sensor-batch"></a></dfn>;
   readonly attribute <a data-link-type="idl-name" href="#sensorinfo1">SensorInfo</a> <dfn class="idl-code" data-dfn-for="Sensor" data-dfn-type="attribute" data-export="" data-readonly="" data-type="SensorInfo " id="dom-sensor-info">info<a class="self-link" href="#dom-sensor-info"></a></dfn>;
@@ -590,7 +591,7 @@ callback <dfn class="idl-code" data-dfn-type="callback" data-export="" id="callb
     <p>Following the conversation in <a class="issue-link" href="https://github.com/w3c/sensors/issues/21" title="Dependency on [DOM] due to inheriting from EventTarget">#21</a>, it becomes apparent that identifying lower-level primitives that do the actual sensor polling would be helpful to better explain the magic behind concrete sensor implementations (in the spirit of the <a href="https://extensiblewebmanifesto.org/">Extensible Web Manifesto</a>) AND pave the path for supporting raw sensors via <a href="https://whatwg.github.io/serial/">serial port</a> or what not.</p>
    </div>
    <h2 class="heading settled" data-level="6" id="extensibility"><span class="secno">6. </span><span class="content">Extensibility</span><a class="self-link" href="#extensibility"></a></h2>
-   <p>The purpose of this section is to describe how this specification can be extended to specify concrete sensors.</p>
+   <p>The purpose of this section is to describe how this specification can be extended to specify concrete <a data-link-type="dfn" href="#sensor">sensors</a>.</p>
    <p>It will feature precise steps on how to extend or inherit from interfaces described in this specification along with examples for two sensors, one which measures a single value and one which measures multiple ones.</p>
    <div class="issue no-marker" id="issue-d41d8cd915">
     <a class="self-link" href="#issue-d41d8cd915"></a><a class="marker" href="https://github.com/w3c/sensors/issues/22">Issue #22 on GitHub: “Simplify extension of the Permissions API for concrete sensor implementations”</a>
@@ -706,7 +707,7 @@ callback <dfn class="idl-code" data-dfn-type="callback" data-export="" id="callb
    <li>
     Sensor
     <ul>
-     <li><a href="#sensor">definition of</a><span>, in §5.3</span>
+     <li><a href="#sensor">definition of</a><span>, in §4</span>
      <li><a href="#sensor0">(interface)</a><span>, in §5.3</span>
     </ul>
    <li><a href="#sensor-fusion">sensor fusion</a><span>, in §4</span>
@@ -730,12 +731,7 @@ callback <dfn class="idl-code" data-dfn-type="callback" data-export="" id="callb
      <li><a href="#sensorreading">definition of</a><span>, in §5.3.15</span>
      <li><a href="#sensorreading0">(interface)</a><span>, in §5.3.15</span>
     </ul>
-   <li>
-    Sensors
-    <ul>
-     <li><a href="#sensors">definition of</a><span>, in §4</span>
-     <li><a href="#sensors0">(interface)</a><span>, in §5.1</span>
-    </ul>
+   <li><a href="#sensors">Sensors</a><span>, in §5.1</span>
    <li>
     sensors
     <ul>
@@ -812,16 +808,16 @@ callback <dfn class="idl-code" data-dfn-type="callback" data-export="" id="callb
   </dl>
   <h2 class="no-num heading settled" id="idl-index"><span class="content">IDL Index</span><a class="self-link" href="#idl-index"></a></h2>
 <pre class="idl">[<a href="#dom-sensors-sensors">Constructor</a>, Exposed=(Window,Worker)]
-interface <a href="#sensors0">Sensors</a> {
+interface <a href="#sensors">Sensors</a> {
   Promise&lt;sequence&lt;<a data-link-type="idl-name" href="#sensorinfo1">SensorInfo</a>>> <a href="#dom-sensors-matchall">matchAll</a>(optional <a data-link-type="idl-name" href="#dictdef-matchalloptions">MatchAllOptions</a> <a href="#dom-sensors-matchall-options-options">options</a>);
 };
 
 partial interface <a class="idl-code" data-link-type="interface" href="https://html.spec.whatwg.org/multipage/browsers.html#window">Window</a> {
-  [SameObject] readonly attribute <a data-link-type="idl-name" href="#sensors0">Sensors</a> <a data-readonly="" data-type="Sensors " href="#dom-window-sensors">sensors</a>;
+  [SameObject] readonly attribute <a data-link-type="idl-name" href="#sensors">Sensors</a> <a data-readonly="" data-type="Sensors " href="#dom-window-sensors">sensors</a>;
 };
 
 partial interface <a class="idl-code" data-link-type="interface" href="https://html.spec.whatwg.org/multipage/workers.html#workerglobalscope">WorkerGlobalScope</a> {
-  [SameObject] readonly attribute <a data-link-type="idl-name" href="#sensors0">Sensors</a> <a data-readonly="" data-type="Sensors " href="#dom-workerglobalscope-sensors">sensors</a>;
+  [SameObject] readonly attribute <a data-link-type="idl-name" href="#sensors">Sensors</a> <a data-readonly="" data-type="Sensors " href="#dom-workerglobalscope-sensors">sensors</a>;
 };
 
 dictionary <a href="#dictdef-matchalloptions">MatchAllOptions</a> {
@@ -839,7 +835,7 @@ dictionary <a href="#dictdef-sensorinit">SensorInit</a> {
 };
 
 [<a href="#dom-sensor-sensor">Constructor</a>(<a data-link-type="idl-name" href="#sensorinfo1">SensorInfo</a> <a href="#dom-sensor-sensor-info-sensorobserveroptions-info">info</a>, optional <a data-link-type="idl-name" href="#dictdef-sensoroptions">SensorOptions</a> <a href="#dom-sensor-sensor-info-sensorobserveroptions-sensorobserveroptions">sensorObserverOptions</a>), Exposed=(Window,Worker)]
-interface <a href="#sensor0">Sensor</a> : <a data-link-type="idl-name" href="https://dom.spec.whatwg.org#interface-eventtarget">EventTarget</a> {
+interface <a class="idl-code" data-link-type="interface" href="#sensor0">Sensor</a> : <a data-link-type="idl-name" href="https://dom.spec.whatwg.org#interface-eventtarget">EventTarget</a> {
   attribute double <a data-type="double " href="#dom-sensor-frequency">frequency</a>;
   attribute boolean <a data-type="boolean " href="#dom-sensor-batch">batch</a>;
   readonly attribute <a data-link-type="idl-name" href="#sensorinfo1">SensorInfo</a> <a data-readonly="" data-type="SensorInfo " href="#dom-sensor-info">info</a>;
