--- a/index.html
+++ b/index.html
@@ -239,14 +239,14 @@ As such, sensor data should only be available within a <a data-link-type="dfn" h
     </ul>
    </div>
    <h2 class="heading settled" data-level="4" id="terminology"><span class="secno">4. </span><span class="content">Terminology</span><a class="self-link" href="#terminology"></a></h2>
-   <p>A <dfn data-dfn-type="dfn" data-noexport="" id="sensor">sensor<a class="self-link" href="#sensor"></a></dfn> provides information about the user and their environment.
-Different <dfn data-dfn-type="dfn" data-noexport="" id="sensor-types">sensor types<a class="self-link" href="#sensor-types"></a></dfn> measure different physical quantities
-such as temperature, air pressure, heart-rate, or luminosity
-and provide corresponding <dfn data-dfn-type="dfn" data-noexport="" id="output-data">output data<a class="self-link" href="#output-data"></a></dfn>.</p>
+   <p>A <dfn data-dfn-type="dfn" data-noexport="" id="sensor">sensor<a class="self-link" href="#sensor"></a></dfn> measure different physical quantities
+and provide corresponding <dfn data-dfn-type="dfn" data-noexport="" id="output-data">output data<a class="self-link" href="#output-data"></a></dfn> which is a source of information about the user and their environment.</p>
    <p>Sensor <a data-link-type="dfn" href="#output-data">output data</a> is generally <dfn data-dfn-type="dfn" data-lt="calibration" data-noexport="" id="calibration">calibrated<a class="self-link" href="#calibration"></a></dfn>,
 to account for known, <em>predictable</em> errors.
 Known but <em>unpredictable</em> error need to be addressed dynamically
 using <a data-link-type="dfn" href="#sensor-fusion">sensor fusion</a>.</p>
+   <p>Different <dfn data-dfn-type="dfn" data-noexport="" id="sensor-types">sensor types<a class="self-link" href="#sensor-types"></a></dfn> measure different physical quantities
+such as temperature, air pressure, heart-rate, or luminosity.</p>
    <p>For the purpose of this specification we distinguish between <a data-link-type="dfn" href="#high-level">high-level</a> and <a data-link-type="dfn" href="#low-level">low-level</a> sensor types.</p>
    <p><a data-link-type="dfn" href="#sensor-types">Sensor types</a> which are characterized by their implementation
 are refered to as <dfn data-dfn-type="dfn" data-noexport="" id="low-level">low-level<a class="self-link" href="#low-level"></a></dfn> sensors.
