--- a/index.html
+++ b/index.html
@@ -1277,7 +1277,7 @@ For example, the <a data-link-type="dfn" href="#output-data">output</a> of a thr
 needs to be combined with the <a data-link-type="dfn" href="#output-data">output</a> of an accelerometer
 to provide a correct bearing. <a data-link-type="dfn" href="#sensor-fusion">Sensor fusion</a> can be carried out at either
 the hardware or software level.</p>
-   <p>Note <a data-link-type="dfn" href="#sensor">sensors</a> created through <a data-link-type="dfn" href="#sensor-fusion">sensor fusion</a> are sometimes
+   <p class="note" role="note">Note: <a data-link-type="dfn" href="#sensor">sensors</a> created through <a data-link-type="dfn" href="#sensor-fusion">sensor fusion</a> are sometimes
 called virtual or synthetic sensors.
 However, the specification doesn’t make any practical differences between them,
 preferring instead to differentiate sensors as to whether they describe
@@ -1367,7 +1367,7 @@ the device’s default (and often unique) sensor
 for each <a data-link-type="dfn" href="#sensor-types">type</a> simply by instantiating the corresponding <a data-link-type="dfn" href="#sensor" instance="">Sensor</a> subclass.</p>
    <p>Indeed, without specific information identifying a particular <a data-link-type="dfn" href="#sensor">sensor</a> of a given <a data-link-type="dfn" href="#sensor-types">type</a>,
 the default <a data-link-type="dfn" href="#sensor">sensor</a> is chosen.</p>
-   <p>Note extension to this specification may choose not to define a default sensor
+   <p class="note" role="note">Note: extension to this specification may choose not to define a default sensor
 when doing so wouldn’t make sense.
 For example, it might be difficult to agree on a an obvious default sensor for
 proximity <a data-link-type="dfn" href="#sensor">sensors</a>.</p>
